# mailstrom

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: nightly-integration-tests.yml  sanity-test-prod.yaml  sanity-test-stage.yml  validate.yml
pulumi/: .gitignore  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.rjung.yaml  Pulumi.stage.yaml  __main__.py  config.dev.yaml  config.prod.yaml  config.rjung.yaml  config.stage.yaml  pyproject.toml  requirements.txt  stalwart.py  stalwart_instance_user_data.sh.j2
pulumi.old/: Pulumi.dev.yaml  Pulumi.yaml
pulumi.orig/: README.md  __main__.py  stalwart.toml
pulumi.orig/libs/: cf_dns.py  iam_policies.py  security_groups.py
pulumi/bootstrap/: bootstrap.py  requirements.txt
pulumi/bootstrap/templates/: debug.md.j2  fluent-bit-collector.service.j2  fluent-bit.service.j2  fluent-bit.yaml.j2  journald.conf.j2  ports.j2  stalwart.toml.j2  thundermail.service.j2
pulumi/stalwart/: __init__.py  dns.py  iam.py  redis.py  s3.py
pulumi/static-dev/: 4xx.html
pulumi/static-prod/: 4xx.html  thundermail.com.xml
pulumi/static-stage/: stage-thundermail.com.xml
test/common/: CalDAV.py  CardDAV.py  IMAP.py  JMAP.py  SMTP.py  const.py  logger.py  utils.py
test/integration/: .env.test.example  IMAP.py  README.md  SMTP.py  conftest.py  const.py  requirements.txt  utils.py
test/integration/caldav/: test_caldav_calendar.py  test_caldav_connect.py  test_caldav_events.py  test_caldav_tasks.py
test/integration/carddav/: test_carddav_address_book.py  test_carddav_connect.py  test_carddav_contacts.py
test/integration/imap/: test_login.py  test_mailboxes.py  test_messaging.py
test/integration/jmap/: test_jmap_connect.py  test_jmap_contacts.py  test_jmap_email.py  test_jmap_mailboxes.py
test/integration/smtp/: test_smtp_login.py  test_smtp_messaging.py
test/load/: .env.test.example  MailstromUser.py  README.md  cleanup.py  const.py  locust.conf  smtp_send.py
test/load/locust-tests/: imap_create_folder.py  smtp_send.py
(+6 files in other folders)
