[project]
name = "mailstrom"
version = "0.0.1"
description = "Pulumi-built infrastructure for Thundermail"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/thunderbird/mailstrom.git"
issues = "https://github.com/thunderbird/mailstrom/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["pulumi/requirements.txt"] }

[project.optional-dependencies]
dev = [
    "ruff"
]
